# PricePulse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-build.yml
src/: main.cpp
src/core/: DatabaseManager.cpp  DatabaseManager.h  PriceScraper.cpp  PriceScraper.h  Product.h  TaskManager.cpp  TaskManager.h
src/ui/: AddProductDialog.cpp  AddProductDialog.h  AddProductDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui
